--- a/css/box model/style.css
+++ b/css/box model/style.css
@@ -10,7 +10,7 @@ div{
     margin: 20px;
     border: 5px dotted red;
     border-radius: 15px;
-    box-sizing: content-box;/*content box*/
+    box-sizing: content-box;
     background-color: rgb(13, 85, 109);
 }
 #borderbox{
@@ -19,6 +19,6 @@ div{
     padding: 50px;
     margin: 20px;
     border: 5px solid rgb(5, 81, 39);
-    box-sizing: border-box;/*border box*/
+    box-sizing: border-box;
     background-color: rgb(13, 85, 109);
 }
